--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^29.4.0",
+    "@types/mocha": "^10.0.1",
     "sass": "^1.58.1"
   }
 }
